# fastAPI-lms-project

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7b99b32bfb2d_.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: config.py
db/models/: course.py  mixins.py  user.py
